# cg_project

./: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Obj.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  glad.c  main.cpp  readme.md  shaderClass.cpp  stb.cpp  tiny_obj_loader.h
libraries/include/glad/: glad.h
